# nixos-config

./: .sops.yaml  README.md  flake.nix  install.sh  nixos-guide.md
certs/: cert.pem
docs/: BOOTSTRAP.md  DECISIONS.md  HOSTS.md  ML-ROCM.md  OPERATIONS.md
home-manager/: default.nix
hosts/desktop/: default.nix  facts.nix  hardware-configuration.nix
hosts/laptop/: default.nix  facts.nix  hardware-configuration.nix  rocm.nix
lib/: mkHost.nix
misc/: easyeffect_fw16.json
misc/firefox/: surfingkeys.js  userChrome.css
modules/core/: bootloader.nix  default.nix  hardware.nix  network.nix  nh.nix  pipewire.nix  program.nix  security.nix  services.nix  sops.nix  system.nix  tailscale.nix  user.nix  virtualization.nix  wayland.nix  xserver.nix
modules/home/: aerc.nix  aichat.nix  bat.nix  btop.nix  chtsh.nix  cleanup.nix  default.desktop.nix  default.nix  dunst.nix  easyeffect.nix  espanso.nix  fish.nix  fuzzel.nix  ghostty.nix  git.nix  gpg.nix  gtk.nix  helix.nix  jj.nix  kitty.nix  lazygit.nix  nemo.nix  niri.nix  packages.nix  ptpython.nix  python-packages.nix  sops.nix  spicetify.nix  ssh.nix  stylix.nix  superfile.nix  swayosd.nix  taskwarrior.nix  theme.nix  tmux.nix  wl-kbptr.nix  wofi.nix  xdg-mimes.nix  yazi.nix  zed.nix  (+1 more)
pkgs/: default.nix
pkgs/2048/: default.nix
pkgs/blazingjj/: default.nix
pkgs/brave-origin-beta/: default.nix  make-brave-origin-beta.nix  update.sh
pkgs/logseq-appimage/: default.nix
pkgs/runapp/: default.nix  fix-std-format-span.patch
secrets/: eval-secrets.nix  secrets.yaml  user-secrets.yaml
templates/ml-rocm-uv/: jax-smoke.py  prepare-jax-rocm-libs.sh  pyproject.toml  smoke.py
(+82 files in other folders)
