[project]
name = "ml-rocm-uv"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jax[rocm7-local]==0.10.2",
  "torch==2.12.1+rocm7.2",
  "torchvision==0.27.1+rocm7.2",
]

[tool.uv]
package = false
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
find-links = [
  "https://download.pytorch.org/whl/rocm7.2/triton-rocm/",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true
